Main instauré à la plage de " Table générale ". Pour reprendre les valeurs  adéquates de la table dans le css. Même fonctionnement et même valeur !  Le main prend toute la page à la plage de ce fameux Td problèmatique. Le main est fait pour ça donc tant mieux !! Mais le problème du bandeau et de la page est désormais aligné. Un td trainé et faisait ce bug. ( celui qui faisait le background blanc ). Page responsive en cours de construction. Mise en plage des photos à venir. Prévoir également des ancres sur chaque liens des championnats du monde.

--- a/Css/ct2.css
+++ b/Css/ct2.css
@@ -95,7 +95,7 @@ background-color: #FAF0E6;
 
 .bandeau {
 
-width:90%;
+width:91%;
 border-width: 0px;
 border-color: black;
 border-style: solid;
@@ -108,17 +108,28 @@ margin: 0px auto;
 
 }
 
-.Figure img
-{
+.Figure img{
+
     width:100%; 
     height:100%; 
     object-fit:cover; 
     object-position: center;
 }
-.Figure
-{
+
+.Figure{
+    
     height:250px; 
     overflow:hidden;
+}
+
+main{
+
+border-width: 0px;
+background-color: RGB(242,242,242);
+width: 90%;
+margin: 1px auto;
+padding: 8px;
+
 }
 
 .piedpage {
@@ -132,16 +143,6 @@ background-color: #FAF0E6;
 border-top-width: 2px;
 border-color: black;
 border-style: solid;
-
-}
-
-.tablegenerale {
-
-border-width: 0px;
-background-color: RGB(242,242,242);
-width: 90%;
-margin:1px auto;
-padding:8px;
 
 }
 
@@ -194,9 +195,10 @@ h1{
 
 .bandeau {
 
-    padding:0px;
-    margin:0px auto;
+    width:91.5%;
+
 }
+
 .imghaut
 {
     width:100%; 
@@ -212,10 +214,17 @@ h1{
 }
 @media screen and (min-width:376px) and (max-width:768px)   /* styles pour mobile paysage+Portrait*/
 {
+
 h1{
    
     font-size:1.5rem;
     width:80%;
+}
+
+.bandeau {
+
+    width:92.5%;
+
 }
 
 img
@@ -225,6 +234,7 @@ img
     object-fit:cover; 
     object-position: center;
 }
+
 .Figure
 {
     height:250px; 
@@ -240,4 +250,14 @@ img
 	line-height:130%;
 	text-align:center;
 }
+}
+@media screen and (max-width:376px) /* styles pour ecran mobile très petit paysage+Portrait*/
+{
+
+.bandeau {
+
+    width:94.5%;
+
+}
+
 }
